# huffman_coding

./: CMakeLists.txt  README.md  big_test.txt  decoder.cpp  encoder.cpp
include/: BitReader.h  BitWriter.h  Code.h  HuffmanTree.h  Node.h  defines.h
src/: BitReader.cpp  BitWriter.cpp  Code.cpp  HuffmanTree.cpp  Node.cpp
